--- a/public/src/index.html
+++ b/public/src/index.html
@@ -26,6 +26,78 @@
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
   </head>
   <body>
+    <nav class="navbar navbar-inverse main-navbar" role="navigation">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">
+                  <i class="logo"></i>
+                  <span class="text">IPouch</span>
+              </a>
+          </div>
+
+          <!--This will be collapse-->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                  <li class="active with-icon">
+                      <a href="#"><i class="fa fa-tachometer"></i>Dashboards</a>
+                  </li>
+                  <li class="with-icon">
+                      <a href="#"><i class="fa fa-bar-chart-o"></i>Reports</a>
+                  </li>
+
+                  <li class="dropdown with-icon">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <i class="fa fa-cog"></i>Admin <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li><a href="#"><i class="fa fa-group"></i>Users</a></li>
+                          <li><a href="#"><i class="fa fa-user"></i>Roles</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#"><i class="fa fa-cogs"></i>Configurations</a></li>
+                          <li><a href="#"><i class="fa fa-clock-o"></i>Service Schedulers</a></li>
+                      </ul>
+                  </li>
+              </ul>
+
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="dropdown no-uppercase">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          Quick Access<b class="caret"></b>
+                      </a>
+                  </li>
+
+                  <li class="dropdown account-wrapper">
+                      <a href="#" class="dropdown-toggle account-text" data-toggle="dropdown">
+                          <span class="avatar_wrapper small">
+								<img class="imgm img-thumbnail" alt="" src="http://lorempixel.com/32/32/people/9" width="32" height="32">
+                          </span>
+                          My Account <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li>
+                            <span class="avatar-wrapper">
+                                <img class="imgm img-thumbnail" alt=""
+                                     src="http://lorempixel.com/96/96/people/9" width="96" height="96">
+                            </span>
+                          </li>
+                          <li class="divider"></li>
+                          <li><a href="#"><i class="fa fa-wrench"></i>Preference</a></li>
+                          <li class="divider"></li>
+                          <li>
+                              <a href="#"> <i class="fa fa-sign-out"></i> Sign Out</a>
+                          </li>
+                      </ul>
+                  </li>
+              </ul>
+          </div>
+      </div>
+    </nav>
+
     <div ui-view></div>
   </body>
 </html>
