--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="mainApp" ng-controller="mainCtrl">
+<html ng-controller="mainCtrl">
   <head>
     <title ng-bind="pageTitle"></title>
 
@@ -97,6 +97,10 @@
           </div>
       </div>
     </nav>
+
+    <div class="main-page-notification">
+        <div notification-popup='globalObj.notification' auto-close=5 class="troposphere-popup-wrapper"></div>
+    </div>
 
     <div ui-view></div>
   </body>
