--- a/public/src/index.html
+++ b/public/src/index.html
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="#!">
                   <i class="logo"></i>
                   <span class="text">IPouch</span>
               </a>
@@ -56,10 +56,10 @@
                       </a>
                       <ul class="dropdown-menu">
                           <li><a href="#!/users"><i class="fa fa-group"></i>Users</a></li>
-                          <li><a href="#"><i class="fa fa-user"></i>Roles</a></li>
+                          <li><a href="#!"><i class="fa fa-user"></i>Roles</a></li>
                           <li class="divider"></li>
-                          <li><a href="#"><i class="fa fa-cogs"></i>Configurations</a></li>
-                          <li><a href="#"><i class="fa fa-clock-o"></i>Service Schedulers</a></li>
+                          <li><a href="#!"><i class="fa fa-cogs"></i>Configurations</a></li>
+                          <li><a href="#!"><i class="fa fa-clock-o"></i>Service Schedulers</a></li>
                       </ul>
                   </li>
               </ul>
