=comments api + comment directive

--- a/public/src/common/comments/comment.tpl.html
+++ b/public/src/common/comments/comment.tpl.html
@@ -12,7 +12,7 @@
         <div class="field">
             <textarea ng-model='newComment.text'></textarea>
         </div>
-        <div class="margin-top-bottom10 btn btn-primary ui fluid blue labeled submit icon button" ng-click='addReply()'>
+        <div class="margin-top-bottom10 btn btn-primary ui fluid blue labeled submit icon button" ng-click='addReply(newComment)'>
             <i class="icon edit"></i> Add Comment
         </div>
     </form>
