--- a/public/src/index.html
+++ b/public/src/index.html
@@ -25,7 +25,7 @@
     <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
   </head>
-  <body style="display: none;">
+  <body style="display: none; background: white;">
     <nav class="navbar navbar-inverse main-navbar" role="navigation">
       <div class="container-fluid">
           <div class="navbar-header">
