--- a/public/src/index.html
+++ b/public/src/index.html
@@ -16,6 +16,9 @@
     <meta property="og:image" content="" />
     <meta property="og:description" content="">
 
+    <!--socket io-->
+    <script src="/socket.io/socket.io.js"></script>
+
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
