=in middle of major socket.io chat

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-controller="mainCtrl">
+<html ng-controller="mainCtrl" ng-app="mainApp">
   <head>
     <title ng-bind="pageTitle"></title>
 
@@ -28,7 +28,7 @@
     <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
   </head>
-  <body style="display: none; background: white;">
+  <body style="background: white;">
     <nav class="navbar navbar-inverse main-navbar" role="navigation">
       <div class="container-fluid">
           <div class="navbar-header">
