=add error modal, create some common directive, etc...

--- a/public/src/cms/user/search.tpl.html
+++ b/public/src/cms/user/search.tpl.html
@@ -1,15 +1,4 @@
-<!--Header BreadCumb-->
-<div class="page-head">
-    <h2 class="page-title">Search: User</h2>
-    <ul class="breadcrumb page-breadcrumb">
-        <li class="breadcrumb-current">
-            <a href="">
-                <i class="fa fa-users"></i>
-                Users
-            </a>
-        </li>
-    </ul>
-</div>
+<div header-bread-crump title="Search: User" sub-title="Users" icon-class="fa fa-users"></div>
 
 <!--Main Content Bootstrap-->
 <div class="content bootstrap userSearchPage">
