--- a/public/src/cms/userAccount/userAccount.tpl.html
+++ b/public/src/cms/userAccount/userAccount.tpl.html
@@ -1,16 +1,5 @@
 <!--Header BreadCumb-->
-<div class="page-head">
-    <h2 class="page-title">My Account</h2>
-    <ul class="breadcrumb page-breadcrumb">
-        <li class="breadcrumb-current">
-            <a href="">
-                <i class="fa fa-users"></i>
-                User Account
-            </a>
-        </li>
-    </ul>
-</div>
-
+<div header-bread-crump title="User Account" sub-title="My Account" icon-class="fa fa-users"></div>
 
 <div class="content bootstrap userAccountPage">
 <form name="accountForm" class="userAccountForm form-horizontal"
