--- a/public/src/index.html
+++ b/public/src/index.html
@@ -93,7 +93,7 @@
                       <ul class="dropdown-menu">
                           <li>
                             <span class="avatar-wrapper">
-                                <img class="imgm img-thumbnail" alt=""
+                                <img class="img img-thumbnail" alt=""
                                      ng-src="{{user.avatar}}" width="96" height="96">
                             </span>
                           </li>
