--- a/public/src/index.html
+++ b/public/src/index.html
@@ -84,7 +84,7 @@
                   <!--</li>-->
 
                   <li class="dropdown account-wrapper">
-                      <a ui-sref='userAccount' class="dropdown-toggle account-text" data-toggle="dropdown">
+                      <a class="dropdown-toggle account-text" data-toggle="dropdown">
                           <span class="avatar_wrapper small">
 								<img class="imgm img-thumbnail" alt="" ng-src="{{user.avatar}}" width="32" height="32">
                           </span>
