=add config dev, test to gitignore, add install guide

--- a/public/src/cms/configuration/configuration.tpl.html
+++ b/public/src/cms/configuration/configuration.tpl.html
@@ -1,7 +1,7 @@
-<div header-bread-crump title="Settings" sub-title="Application Settings" icon-class="fa fa-cogs"></div>
+<!--<div header-bread-crump title="Settings" sub-title="Application Settings" icon-class="fa fa-cogs"></div>-->
 
 <div class="sidebar-wrapper" ng-init="sidebarNarrow=false;" ng-class="{'sidebar-narrow': !!sidebarNarrow}">
-    <div class="sidebar" style="top: 110px;">
+    <div class="sidebar" style="top: 57px;">
         <div class="sidebar-content">
             <div class="sidebar-header dropdown">
             <span class="header">
