--- a/public/src/index.html
+++ b/public/src/index.html
@@ -77,17 +77,11 @@
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                  <!--<li class="dropdown no-uppercase">-->
-                      <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-                          <!--Quick Access<b class="caret"></b>-->
-                      <!--</a>-->
-                  <!--</li>-->
-
                   <li class="dropdown account-wrapper">
                       <a class="dropdown-toggle account-text" data-toggle="dropdown">
-                          <span class="avatar_wrapper small">
-								<img class="imgm img-thumbnail" alt="" ng-src="{{user.avatar}}" width="32" height="32">
-                          </span>
+                          <span class="avatar-wrapper small">
+                              <img class="img-thumbnail" ng-src="{{user.avatar}}" alt=""/>
+                          </span>
                           MY ACCOUNT<b class="caret"></b>
                       </a>
                       <ul class="dropdown-menu">
